# Manta

.github/workflows/: benchmark.yml  parachain.yml  publish-draft-release.yml  publish-draft-releases.yml
pallets/manta-xassets/: Cargo.toml
pallets/manta-xassets/src/: lib.rs
runtime/calamari/src/: lib.rs
runtime/manta-pc/src/: lib.rs
runtimes/manta/: Cargo.toml
runtimes/manta/primitives/: Cargo.toml
runtimes/manta/runtime/: Cargo.toml
runtimes/manta/runtime/src/: lib.rs
scripts/: release.sh
scripts/github/: fallback-changelog.md  generate-changelog.rb  manta-release.erb
