[package]
authors = ['Manta Network']
build = 'build.rs'
description = 'A Manta Network node.'
edition = '2018'
homepage = 'manta.network'
license = 'GPL V3'
name = 'manta'
version = '3.0.0'

[[bin]]
name = 'manta'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
rand = "0.7.2"
hex-literal = '0.3.1'
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"

# Substrate dependencies
frame-benchmarking = {  default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.1.0'}
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
pallet-transaction-payment-rpc = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-basic-authorship = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', features = ['wasmtime'], version = '0.9.0' }
sc-client-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-consensus = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-consensus-babe = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-consensus-babe-rpc = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-consensus-epochs = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-consensus-slots = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-chain-spec = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-executor = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-finality-grandpa-rpc = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-keystore = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-network = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-rpc = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-rpc-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sc-service = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', features = ['wasmtime'], version = '0.9.0' }
sc-telemetry = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sc-sync-state-rpc = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sp-blockchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sp-consensus = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0' }
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sp-finality-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sp-keystore = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0'}
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}
substrate-frame-rpc-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0'}


# local dependencies
manta-runtime = { path = './runtime', version = '3.0.0' }
manta-primitives = { path = './primitives', default-features = false }

[features]
default = []
runtime-benchmarks = ['manta-runtime/runtime-benchmarks']

[dev-dependencies]
sc-keystore = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '3.0.0' }
sc-consensus = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0' }
sc-consensus-babe = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0' }
sc-consensus-epochs = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', version = '0.9.0' }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.20.0"
serde_json = "1.0"
regex = "1"
platforms = "1.1"